      dragged off its endpoints (and possibly discarded; use this in conjunction with 'reattach'). defaults to false.

    - added 'connectionsDetachable' parameter to jsPlumb.addEndpoint/jsPlumb.makeSource/jsPlumb.makeTarget.  does the
      same thing as 'detachable' on jsPlumb.connect, discussed above.

    - added isDetachable/setDetachable methods to Connection.

	- added previousConnection to a connection that has been moved.

	- removed labelStyle from Label overlay.  to set fonts/border/background, use a cssClass now.

    - added getImage method to Image endpoint

    - added 'onload' parameter to Endpoint (for use when constructing an Image endpoint)

	- added getSelector method to jsPlumb library adapters; exposes the ability to abstract out a list 
	of elements you want to work with.

	- added beforeDetach option to Connection, Endpoint, and on jsPlumb as a bind. this works both
	  programmatically and with drag and drop.
	  
	- added beforeDrop option to Endpoints that have isTarget:true.
	
	- removed the notion of jsplumb making everything draggable by default.  it is now the user's responsibility
	to ensure everything is draggable.  use jsPlumb.draggable for this, still, of course, or jsPlumb won't
	know about your draggable elements.
	
	- added jsPlumb.makeSource method
	- finished jsPlumb.makeTarget method properly.
	
	- added getLocation/setLocation to AbstractOverlay (so all Overlays derive these methods)
	
	- removed endpointsOnTop parameter from Connection
	
	- added ContinuousAnchors
	- added StateMachine connectors
	
	- reinstated the 'tooltip' parameter on jsPlumb.connect and jsPlumb.addEndpoint, and 'connectorTooltip' on jsPlumb.addEndpoint.
	
	- added 'hoverClass' to endpoints and connections.  this is supported in the individual connector
	and endpoint definitions, NOT the main args you pass to addEndpoint or connect.
	
	- added jsPlumb.util.svg; currently contains addClass/removeClass methods.  jQuery fails to set a class